--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,11 @@
 
-
-<div class="container">
-  <app-navi></app-navi>
-  <app-carousel></app-carousel>
+ <app-navi></app-navi>
+<div class="container-fuild">
   <div class="row">
-    <div class="col-md-2">
-<app-place-category></app-place-category>
-    </div>
-    <div class="col-md-10">
+    <div class="col-12">
       <router-outlet></router-outlet>
     </div>
-
   </div>
-
-
-
-
 </div>
 
 
