--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -6,24 +6,22 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="https://www.wtso.com/blog/wp-content/uploads/2022/03/WTSO-Wines-Til-Sold-Out-Online-Wine-Shop-Online-Blog-tips-for-ordering-wine-at-a-business-meal-with-clients.jpg" width="auto" height="500px" class="d-block w-100" alt="...">
+        <img src="https://www.etstur.com/letsgo/wp-content/uploads/2015/06/lets-go-885x35617.jpg" width="auto" height="500px" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h5 style="color:black">İlk adımı siz atın ve korkmadan yola çıkın...</h5>
+
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="https://goalz.online/wp-content/uploads/2022/05/1651807305_barista-making-coffee.jpg"  width="auto" height="500px" class="d-block w-100"  alt="...">
+        <img src="https://www.egitimajansi.com/images/news/240a2303c53365a3f63c6d6214704293.jpg"  width="auto" height="500px" class="d-block w-100"  alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          <h5>Dünyanın heryerinde ...</h5>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://classicdine.com/upload-files/parking/bg/75d805cdb645d856635da019e02c3377.jpg" class="d-block w-100"  height="500px" alt="...">
+        <img src="https://www.bestfoodfacts.org/wp-content/uploads/2019/08/restaurant.jpg" class="d-block w-100"  height="500px" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5 style="color:black">Aradığınız mekanlar RestLock kadar uzakta</h5>
         </div>
       </div>
     </div>
