--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,3 +1,5 @@
+
+<div>
 <table style="margin-top:5%" class="table">
     <thead>
       <tr>
@@ -16,3 +18,6 @@
       </tr>
     </tbody>
   </table>
+
+
+</div>
