--- a/src/app/components/place-detail/place-detail.component.html
+++ b/src/app/components/place-detail/place-detail.component.html
@@ -12,21 +12,27 @@
         id="carouselExampleControls"
         class="carousel slide"
         data-bs-ride="carousel"
+        
       >
-        <div *ngFor="let place of placeImages" class="carousel-inner">
-          <div class="carousel-item active">
-            <img [src]="place.imagePath" class="d-block w-100" alt="..." />
-          </div>
-        </div>
         <button
           class="carousel-control-prev"
           type="button"
           data-bs-target="#carouselExampleControls"
           data-bs-slide="prev"
-        >s
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+          
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true" ></span>
+          <span class="visually-hidden" >Previous</span>
         </button>
+
+
+        <div  class="carousel-inner">
+          <div  *ngFor="let place of placeImages; let index = index"  class="carousel-item active">
+            <img  style="max-width: 350px; height:auto;" src="{{place.imagePath}}" class="d-block w-100" alt="..." />
+          </div>
+        </div>
+
+
         <button
           class="carousel-control-next"
           type="button"
@@ -120,10 +126,9 @@
             >
           </li>
           <li class="nav-item">
-            <a style="font-style: italic" class="nav-link bi bi-list" href="#">
-              Menü</a
-            >
+            <a style="font-style: italic" class="nav-link bi bi-list" href="#">Menü</a>
           </li>
+          s
         </ul>
 
         <article class="blog-post">
