--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -10,10 +10,10 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let menu of menus" >
+      <tr  >
         <th scope="row">1</th>
-        <td>{{menu.placeId}}</td>
-        <td>{{menu.menuId}}</td>
+        <td>{{menuDetails?.productName}}</td>
+        <td>{{menuDetails?.unitPrice}}</td>
         <td>@mdo</td>
       </tr>
     </tbody>
